Arrumando a estrutura do projeto

--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -22,3 +22,13 @@ header{
   align-items: center;
 }
 
+@media screen and (max-width: 600px) {  /* Tablet */
+
+ 
+}
+
+
+@media screen and (max-width: 300px) { /* Mobile */
+
+  
+ }
