--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -62,3 +62,14 @@ gap: 20px;
     margin: 10px;
   }
   
+
+  @media screen and (max-width: 600px) {  /* Tablet */
+
+ 
+  }
+  
+  
+  @media screen and (max-width: 300px) { /* Mobile */
+  
+    
+   }
