--- a/src/pages/Connect.css
+++ b/src/pages/Connect.css
@@ -1,7 +1,7 @@
-.div-rankings{
+.div-connect{
     align-items: center;
     text-align: center;
-    border: 1px solid rgb(240, 13, 13); /* Adicione estilos de borda aqui */
+    border: 1px solid rgb(238, 149, 149); /* Adicione estilos de borda aqui */
     padding: 10px; /* Exemplo adicional para espaçamento interno */
 
 }
