colocando o icone no topo da pagina

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -7,3 +7,24 @@
     padding: 10px; /* Exemplo adicional para espaçamento interno */
 
 }
+.div-trending{
+    align-items: center;
+    text-align: center;
+    border: 1px solid rgb(109, 107, 124); /* Adicione estilos de borda aqui */
+    padding: 10px; /* Exemplo adicional para espaçamento interno */
+
+}
+.div-top{
+    align-items: center;
+    text-align: center;
+    border: 1px solid rgb(133, 128, 175); /* Adicione estilos de borda aqui */
+    padding: 10px; /* Exemplo adicional para espaçamento interno */
+
+}
+.div-browse{
+    align-items: center;
+    text-align: center;
+    border: 1px solid rgb(35, 26, 110); /* Adicione estilos de borda aqui */
+    padding: 10px; /* Exemplo adicional para espaçamento interno */
+
+}
