--- a/src/components/CardHome.css
+++ b/src/components/CardHome.css
@@ -6,10 +6,10 @@
     padding: 10px; /* Exemplo adicional para espaçamento interno */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
-    width: 30%;
-    
+    width: 45%;
+    height: 20%;
     animation: spin 5s linear infinite; /* Configuração da animação */
-    padding: 0 0 10px 0;
+    
 }
 
 @keyframes spin {
@@ -37,7 +37,7 @@ width: 0%;
 
 
 width: 100%;
-
+border-radius: 20px;
 
 }
 
