--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap');
 
 .div-total{
+    margin-top: 10%;
     display: grid;
     place-items: center;
 }
 
 .div-home{
-    padding-top: 3%;
+  
     display: flex;
     justify-content:space-between;
     width: 85%;
@@ -28,17 +29,41 @@
     display: flex;
     justify-content: center;
     width: 85%;
-    text-align: center;
-    border: 1px solid rgb(35, 26, 110); /* Adicione estilos de borda aqui */
-    padding: 10px; /* Exemplo adicional para espaçamento interno */
+    margin-top: 5%;
+    flex-direction: column;
+    align-items: flex-start;
 
+
+
+}
+.div-browse h4{
+
+font-family: 'Work Sans', sans-serif;
+font-size: 28px;
+color: rgba(255, 255, 255, 1);
 
 
 }
 
 
+.div-discover{
+
+    display: grid;
+    width: 85%;
+    margin-top: 7%;
+}
 
 
+.div-imagem{
+   
+width: 100%;
+height: 660px;
+background-image: url('../assets//NFTHighlight.png');
+background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+}
 
 
 
