tabs ligeiramentes ajeitadas

--- a/src/components/ConteudoRankingsToday.css
+++ b/src/components/ConteudoRankingsToday.css
@@ -11,7 +11,9 @@
   width: 100vw;
   justify-content: space-evenly;
   flex-direction: row;
-  gap: 16px;
+  gap: 183px;
+  margin-top: 100px;
+  
 }
 .conteudotoday{
   color: white;
