--- a/src/pages/Artist.css
+++ b/src/pages/Artist.css
@@ -1,7 +1,7 @@
 .div-artist{
-    align-items: center;
-    text-align: center;
-    border: 1px solid rgb(109, 94, 243); /* Adicione estilos de borda aqui */
+    /* border: 1px solid rgb(109, 94, 243); /* Adicione estilos de borda aqui */
+    display: flex;
+    flex-direction: column;
     padding: 10px; /* Exemplo adicional para espaçamento interno */
 
 }
