--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -39,7 +39,7 @@
 .div-browse h4{
 
 font-family: 'Work Sans', sans-serif;
-font-size: 28px;
+font-size: 38px;
 color: rgba(255, 255, 255, 1);
 
 
@@ -50,25 +50,58 @@ color: rgba(255, 255, 255, 1);
 
     display: grid;
     width: 85%;
-    margin-top: 7%;
+    margin-top: 10%;
+    
 }
 
 
 .div-imagem{
-   
+margin-top: 7%;
 width: 100%;
 height: 660px;
-background-image: url('../assets//NFTHighlight.png');
+background-image:linear-gradient(to bottom, rgba(162, 89, 255, 0), rgba(162, 89, 255, 1)), url('../assets//NFTHighlight.png');
 background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  
+
+  display: flex;
+  align-items:flex-end;
+    justify-content: space-between;
+    padding: 10%;
 
 }
 
 
 
 
+.div-how{
 
+    display: grid;
+    width: 85%;
+    margin-top: 7%;
+
+}
+
+
+.div-join-our{
+
+    display: flex;
+    width: 85%;
+    margin-top: 7%;
+
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    text-align:left;
+    background: rgba(59, 59, 59, 1);
+
+    padding: 5%;
+   gap: 100px;
+   margin-bottom: 7%;
+   border-radius: 20px;
+
+}
 
 
 
