--- a/src/components/ArtistPageTabs.css
+++ b/src/components/ArtistPageTabs.css
@@ -15,6 +15,7 @@
     padding-bottom: 10px;
     border-bottom: 2px solid var(--caption-label-text, #858584);
     align-content: center;
+    cursor:pointer;
 }
 
 .created h3{
@@ -53,6 +54,18 @@
     padding-bottom: 10px;
 }
 
+.owned:hover{
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 2px solid var(--caption-label-text, #858584);
+    align-content: center;
+    cursor:pointer;
+
+}
+
 .owned h3{
     color: #858584;
     text-align: center;
@@ -86,6 +99,18 @@
     flex-direction: row;
     gap: 16px;
     align-items: center;
+    padding-bottom: 10px;
+}
+
+.collection:hover{
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 2px solid var(--caption-label-text, #858584);
+    align-content: center;
+    cursor:pointer;
 }
 
 .collection h3{
