--- a/src/pages/Marketplace.css
+++ b/src/pages/Marketplace.css
@@ -10,6 +10,7 @@
   align-items: center;
   width: fit-content;
   gap: 30px;
+  padding: 80px 0;
 }
 
 .text-headline {
@@ -58,4 +59,71 @@
 .searchbar-headline > img {
   width: 24px;
   height: 24px;
+}
+
+.content-marketplace {
+  width: 100%;
+}
+
+.navigationbar-content {
+  border-top: 1px solid #3b3b3b;
+  padding-top: 10px;
+  display: flex;
+  font-family: "Work Sans", sans-serif;
+  font-size: 22px;
+  font-weight: 600;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 525px;
+  height: 60px;
+  border: none;
+  gap: 16px;
+  cursor: pointer;
+}
+
+.enabled {
+  color: #fff;
+  border-bottom: 2px solid #858584;
+}
+
+.enabled > .counter-itens {
+  background: #858584;
+}
+
+.disabled {
+  color: #858584;
+}
+
+.counter-itens {
+  display: flex;
+  border-radius: 20px;
+  height: 32px;
+  padding: 5px 10px;
+  font-family: "Space Mono";
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+  align-items: center;
+}
+
+.disabled > .counter-itens {
+  background: #3b3b3b;
+}
+
+.cards-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 60px 115px 80px 115px;
+  background: #3b3b3b;
+  border-bottom: 2px solid #2b2b2b;
+  gap: 30px;
+  flex-wrap: wrap;
 }
