--- a/src/components/ArtistPageInfo.css
+++ b/src/components/ArtistPageInfo.css
@@ -29,8 +29,18 @@
 @media screen and (max-width: 375px) {
     .div-artist-page-info{
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         gap: 20px;
+    }
+
+    .buttons{
+        flex-direction: column;
+        align-items: flex-start;
+        padding-left: 20px;
+    }
+
+    .img-artist-page-cover-avatar{
+        align-items: center;
     }
 }
 
