--- a/src/components/ArtistPageTabs.css
+++ b/src/components/ArtistPageTabs.css
@@ -46,6 +46,124 @@
     line-height: 140%; /* 22.4px */
 }
 
+@media screen and (max-width: 768px) {
+    .created h3{
+        color: var(--white, #FFF);
+        text-align: center;
+        /* H5 - Work Sans */
+        font-family: Work Sans;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 140%; /* 30.8px */
+        text-transform: capitalize;
+    }
+
+    .created span{
+        color: #FFF;
+        /* Caption - Space Mono */
+        font-family: Space Mono;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 110%; /* 13.2px */
+    }
+    
+    .owned h3{
+        color: var(--white, #FFF);
+        text-align: center;
+        /* H5 - Work Sans */
+        font-family: Work Sans;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 140%; /* 30.8px */
+        text-transform: capitalize;
+    }
+
+    .owned span{
+        color: #FFF;
+        /* Caption - Space Mono */
+        font-family: Space Mono;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 110%; /* 13.2px */
+    }
+
+    .collection h3{
+        color: var(--white, #FFF);
+        text-align: center;
+        /* H5 - Work Sans */
+        font-family: Work Sans;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 140%; /* 30.8px */
+        text-transform: capitalize;
+    }
+
+    .collection span{
+        color: #FFF;
+        /* Caption - Space Mono */
+        font-family: Space Mono;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 110%; /* 13.2px */
+    }
+}
+
+@media screen and (max-width: 375px) {
+    
+    .created {
+        display: flex;
+        flex-direction: row;
+        gap: 16px;
+        align-items: center;
+        padding-bottom: 10px;
+        border-bottom: 2px solid var(--caption-label-text, #858584);
+        align-content: center;
+        cursor:pointer;
+    }
+    
+    .created :nth-child(n+2){
+        display: none;
+    }
+
+    .owned{
+        text-align: center;
+        /* H5 - Work Sans */
+        font-family: Work Sans;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 140%; /* 30.8px */
+        text-transform: capitalize;
+    }
+
+    .owned :nth-child(n+2){
+        display: none;
+    }
+
+    .collection{
+        color: var(--white, #FFF);
+        text-align: center;
+        /* H5 - Work Sans */
+        font-family: Work Sans;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 140%; /* 30.8px */
+        text-transform: capitalize;
+    }
+
+    .collection :nth-child(n+2){
+        display: none;
+    }
+    
+}
+
 .owned{
     display: flex;
     flex-direction: row;
