--- a/src/pages/Nftpage.css
+++ b/src/pages/Nftpage.css
@@ -3,7 +3,12 @@
 .container_nftPage{
     display: flex;
     gap: 5%;
-    padding: 0 20%;
+    padding: 0 13%;
+    margin-top: 3rem;
+}
+
+.nftPage_counter_mobile{
+    display: none;
 }
 
 .CImg_desktop{
@@ -23,13 +28,72 @@
 }
 
 .nftPage_description p{
-    font-size: 1.2rem;
+    font-size: 1.4rem;
+    font-family: 'Work Sans', sans-serif;
+    color: white;
+    margin-top: 1.5rem;
+}
+
+.nftPage_description h6{
+    font-size: 1.4rem;
+    font-family: 'Work Sans', sans-serif;
+    color: #858584;
+    margin-top: 2.5rem;
+}
+
+.nftPage_description_artist{
+    font-size: 1.4rem;
     font-family: 'Work Sans', sans-serif;
     color: white;
 }
 
-.nftPage_description_sub{
-    color: #3b3b3b;
+.nftPage_description_artist_container {
+    display: flex;
+    align-items: center;
+    transition: all 0.3s;
+  }
+
+.nftPage_description_artist_container:hover{
+    transform: scale(0.95);
+}
+
+.nftPage_description_artist img{
+    width: 1.5rem;
+}
+
+.nftPage_description_details{
+    font-size: 1.4rem;
+    font-family: 'Work Sans', sans-serif;
+    color: white;
+}
+
+.nftPage_description_details_container{
+    display: flex;
+    align-items: center;
+}
+
+.nftPage_description_tags{
+    font-family: 'Work Sans', sans-serif;
+    text-transform: uppercase;
+    color: white;
+}
+
+.nftPage_description_tags p{
+    display: inline-block;
+    font-size: 1.2rem;
+    margin-top: 2rem;
+    background-color: #3b3b3b;
+    border-radius: 30px;
+    padding: 1rem 2rem;
+    transition: all 0.3s;
+}
+
+.nftPage_description_tags p:hover{
+    transform: scale(0.95);
+}
+
+.nftPage_counter_div{
+    text-align: center;
 }
 
 .nftPage_counter{
@@ -75,3 +139,55 @@
 .Nftbutton:hover{
     transform: scale(0.95);
 }
+
+.nftPage_counter_mobile{
+    display: none;
+    padding: 15px;
+    background-color: #3b3b3b;
+    border-radius: 20px;
+}
+
+.nftPage_counter_mobile p{
+    color: white;
+    font-family: 'Work Sans', sans-serif;
+}
+
+.nftPage_counter_counter_mobile{
+    display: flex;
+    justify-content: space-between;
+}
+
+.nftPage_counter_counter_mobile p{
+    font-size: 2rem;
+    margin-top: 0.5rem;
+}
+
+.nftPage_counter_descrition_mobile{
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.2rem;
+    margin-bottom: 0.8rem;
+}
+
+
+@media(max-width:1000px){
+    .container_nftPage{
+        padding: 0 7%;
+    }
+}
+
+@media(max-width:768px){
+    .container_nftPage{
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0 3%;
+    }
+
+    .nftPage_counter_mobile{
+        display: block;
+    }
+
+    .nftPage_counter_div{
+        display: none;
+    }
+}   
